# autobahn-python

./: .coveragerc  .deepsource.toml  .gitignore  .gitmodules  .prettierrc.json  .readthedocs.yaml  .travis-deploy.sh  .travis.yml  .versions.sh  AI_AUDIT_PROCESS.md  AI_AUDIT_PROCESS_REVIEW.md  AI_POLICY.md  AI_POLICY.rst  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS  DEVELOPERS.md  DEVELOPING.md  Dockerfile.wheels  ENUMERATION_AUDIT.md  ENUMERATION_AUDIT_ANSWERS.md  FLATBUFFERS_TODO.md  ISSUES_TO_FIX.md  LICENSE  MANIFEST.in  Makefile  OVERVIEW.md  README  README.md  README.rst  SConstruct  TODO  TODO.md  autobahnpython.sublime-project  copy_project_templates.py  deploy.sh  docker-bake.hcl  hatch_build.py  inject-build-id.py  (+16 more)
.ai/: AI_ACKNOWLEDGEMENT.md  AI_GUIDELINES.md  AI_POLICY.md  CLAUDE.md
.audit/: AI_AUDIT_PROCESS_REVIEW.md  JavierSab_patch-1.md  PRE_RELEASE_CHECKLIST-v25.10.1.md  README.md  bblommers_chore-apply-ruff-up.md  bblommers_websocket-server-typing.md  oberstet:rel_v26.6.1.md  oberstet:rel_v26.6.1_part2.md  oberstet_fix_1757.md  oberstet_fix_1764.md  oberstet_fix_1767.md  oberstet_fix_1771.md  oberstet_fix_1830.md  oberstet_fix_1831.md  oberstet_fix_1834.md  oberstet_fix_1840.md  oberstet_fix_1848.md  oberstet_fix_1849.md  oberstet_fix_1850.md  oberstet_fix_1853.md  oberstet_fix_1856.md  oberstet_fix_1859.md  oberstet_fix_1875.md  oberstet_fix_1877.md  oberstet_fix_1878.md  oberstet_fix_1891.md  oberstet_fix_1892.md  oberstet_mig-just-uv-ruff-part3.md  oberstet_mig-just-uv-ruff-part4.md  oberstet_modernization-phase-11.md  oberstet_modernization-phase-12.md  oberstet_modernization-phase-13.md  oberstet_modernization-phase-14.md  oberstet_rel25_12_1.md  oberstet_rel_v25.10.1_part1.md  oberstet_rel_v25.10.2.md  oberstet_rel_v25.10.2_part2.md  oberstet_rel_v25.9.1.md  oberstet_rel_v25.9.1_part2.md  oberstet_rel_v25.9.1_part3.md  (+7 more)
.githooks/: README.md  commit-msg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/scripts/: build-arm64-wheel.sh  rtd-download-artifacts.sh
.github/templates/: discussion-post.md.j2  pr-comment.md.j2  release-development.md.j2  release-nightly.md.j2  release-stable.md.j2
.github/workflows/: README.md  deploy.yml  docker.yml  generate_summary.py  main.yml  post-summary.yml  pyinstaller.yml  release-post-comment.yml  release.yml  verify_conformance.py  wheels-arm64.yml  wheels-docker.yml  wheels.yml  wstest.yml
autobahn/: LICENSE  MANIFEST.in  Makefile  NOTICE  README  README.md  __init__.py  __main__.py  _logging.py  _version.py  clean.sh  exception.py  logger.py  setup.py  testutil.py  tox.ini  util.py
autobahn/asyncio/: __init__.py  component.py  connection.py  rawsocket.py  util.py  wamp.py  websocket.py  xbr.py
autobahn/autobahn/: __init__.py  _version.py  asyncio.py  choosereactor.py  compress.py  compress_base.py  compress_bzip2.py  compress_deflate.py  compress_snappy.py  flashpolicy.py  fuzzing.py  httpstatus.py  interfaces.py  pbkdf2.py  report.py  resource.py  subscriptionmap.py  tracker.py  trie.py  twisted.py  useragent.py  utf8validator.py  util.py  wamp.py  wamp2.py  wamp2domain.py  wamp2factory.py  wamp2message.py  wamp2protocol.py  websocket.py  xormasker.py
autobahn/nvx/: __init__.py  _compile_args.py  _utf8validator.c  _utf8validator.py  _xormasker.c  _xormasker.py
autobahn/rawsocket/: __init__.py  util.py
autobahn/src/: utf8validator.c  xormasker.c
autobahn/test/: __init__.py  test_asyncio_rawsocket.py  test_rng.py  test_util.py
autobahn/twisted/: __init__.py  choosereactor.py  component.py  connection.py  cryptosign.py  forwarder.py  longpoll.py  rawsocket.py  resource.py  util.py  wamp.py  websocket.py  xbr.py
autobahn/ueberschall/: __init__.py  _validator.c  _validator.py
autobahn/wamp/: __init__.py  auth.py  component.py  connection.py  cryptobox.py  cryptosign.py  exception.py  interfaces.py  keyring.py  (+12 more)
doc/: .gitignore  Makefile  README  README.md  SConstruct  WAMPv2 Application Code Deployment.vsd  WAMPv2.md  asynchronous-programming.rst  changelog.rst  classes.vsd  conf.py  contents.rst  contribute.rst  examples.rst  index.rst  installation.rst  make.bat  reference.rst  requirements.txt  serve.py  spelling_wordlist.txt  table_of_contents.rst  twistedintegration.rst  wamp1base.rst  wamp1client.rst  wamp1server.rst  wamp1toc.rst  wamp2.rst  wamp2all.rst  wamp2app.rst  wamp2errors.rst  wamp2interfaces.rst  wamp2protocol.rst  wamp2router.rst  wampbase.rst  wampclient.rst  wampprogramming.rst  wampserver.rst  wamptoc.rst  websocketaux.rst  (+7 more)
docker/: Dockerfile.cpy-slim  Dockerfile.pypy-bookworm-manylinux-arm64  Dockerfile.pypy-slim  Dockerfile.pypy-trixie-manylinux-arm64  Makefile  README.md  images.json  images.py  print-versions.py  push_to_private.py  removeall.sh  versions.sh
docs/: AI_AUDIT_PROCESS.md  AI_AUDIT_PROCESS_REVIEW.md  AI_GUIDELINES.md  AI_POLICY.md  CLAUDE.md  DOCKER_BUILDS.md  Makefile  OVERVIEW.md  asynchronous-programming.rst  autobahn-on-free-threaded-python.rst  changelog.rst  conf.py  contents.rst  contribute.rst  contributing.rst  getting-started.rst  index.rst  installation.rst  overview.rst  release-notes.rst  wheels-inventory.rst  xbr-auth.rst  xbr-cli.rst  xbr.rst
examples/: Makefile  README.md  asciinema-autobahn-demo.py  index.html  run-all-examples.py  running-the-examples.md
flatbuffers/: builder.py  encode.py  flexbuffers.py  util.py
lib/: README
pyinstaller/: hook-autobahn.py  hook-twisted.py  hook-xbr.py  xbrnetwork.spec
scripts/: smoke_test.py  smoke_test_flatc.py  update_flatbuffers.sh  vendor_flatbuffers.py
snap/: snapcraft.yaml
test/: autobahn_server.py  websocket_client.py  websocket_server.py
wstest/: .gitignore  Makefile  README.md  build_pypy3.sh  build_wstest.sh  fuzzingclient-full.json  fuzzingclient-quick.json  fuzzingserver-full.json  fuzzingserver-quick.json  fuzzingserver.json  testee_client_aio.py  testee_client_tx.py  testee_server_aio.py  testee_server_tx.py
xbr/: README.rst  setup.py
(+2072 files in other folders)
